00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: iobroker
  labels:
    name: iobroker
