02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: iobroker
  name: iobroker-deployment
  namespace: iobroker
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: iobroker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: iobroker
    spec:
      containers:
      - env:
        image: buanet/iobroker:v5.1.0
        imagePullPolicy: IfNotPresent
        name: iobroker-container
        ports:
        - containerPort: 8081
          name: iobroker-tcp
          protocol: TCP
        volumeMounts:
        - mountPath: /opt/iobroker
          name: iobroker
        - mountPath: /opt/userscripts
          name: userscripts
        - mountPath: /workdir
          name: workdir
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: workdir
      - name: iobroker
        persistentVolumeClaim:
          claimName: iobroker-pvc
      - name: userscripts
        persistentVolumeClaim:
          claimName: userscripts-pvc
