03-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: iobroker
  name: iobroker-service
  namespace: iobroker
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: iobroker
  sessionAffinity: None
  type: ClusterIP
